   Version 0.36
   Version 0.35

-----------------------------------------------------------------------
 Version 0.53
 ============

 Released on 
  
 New features and improvements:

   - DDL Core v 29
   - DDL VAT v 5
   - Import a default accounts chart on dossier creation (todo #1051).
   - Export a dynamic list of exportable objects (todo #519).
   - VATForm: make it exportable (todo #940).

 Bug fixes:

   - Remove underlines of detached page titles.

 Other changes:

   - myIWindow: remove all references to main window.
   - myIWindow::get_key_prefix(): new method.
   - ofaApplication: implements new ofaIGetter interface.
   - ofaExtension: now passes the ofaIGetter (instead of the GApplication).
   - ofaFileDir: renamed as ofaPortfolioCollection (todo #1052).
   - ofa_hub_register_types(): new method.
   - ofaIRegister: new interface.
   - ofaIGetter: new interface.
   - ofaIThemeManager: new interface.
   - ofaMainWindow: implements new ofaIGetter and ofaIThemeManager interfaces.
   - ofaMainWindow: headers are moved back to ui/ (todo #937).
   - ofa_main_window_activate_theme(): removed method.
   - ofa_main_window_get_hub(): removed method.
   - ofa_nomodal_page_get_by_theme(): removed method.
   - ofa_nomodal_page_present_by_type(): new method.
   - ofaPage: implements new ofaIGetter interface.
   - ofa_page_get_main_window(): removed method.
   - ofa_page_get_hub(): removed method.
   - ofa_page_get_theme(): removed method.

-----------------------------------------------------------------------
 Version 0.52
 ============

 Released on 2016-03-26

 There is a triple review with this version:

   1/ first, the ofaPlugins class, which held both list of plugins as a
      static global variable, and the plugins management itself as a
      standard class, is splitted into ofaExtenderCollection and
      ofaExtenderModule classes.
      Though these classes are rather standard, they must be kept in the