@@ -364,8 +364,6 @@
                      for plugins => implies to have a core lib and a ui lib
      2015-12-27      have to choose between api/ui or api-ui styles
 
- 939 2015-12-21 FEAT tva/ofoTVAForm: make it importable
-
  956 2016- 1- 6 PACK add to make distcheck a script which checks that
                      -def includes are always used in headers (and only)
 
@@ -612,6 +610,9 @@
                      up almost all pages..
      2016- 1-27 done: headers are moved back to ui/ directory, thanks to
                 the new ofaIGetter and ofaIThemeManager interfaces.
+
+ 939 2015-12-21 FEAT tva/ofoTVAForm: make it importable
+     2016- 3-29 done
 
  940 2015-12-21 FEAT tva/ofoTVAForm: make it exportable
      2016- 3-29 done
